Done point 5 (62-use-lists-and-maps)